Minor fixes
Changes em's to rem in footer and added extra space in one function.

--- a/style.css
+++ b/style.css
@@ -674,7 +674,8 @@ footer {
 }
 footer p {
 	color: #d4d4d4;
-	font-size: 0.75em; 
+	font-size: 12px;
+	font-size: 1.2rem;
 	padding: 0.625em;
 }
 footer a {
